--- a/.github/workflows/python-script.yml
+++ b/.github/workflows/python-script.yml
@@ -30,12 +30,17 @@ jobs:
         run: python script.py
 
         
-      - name: Commit and push changes
+      - name: Configurer authentification Git
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions@github.com"
+          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git
+
+
+      - name: Valider et pousser les modifications
+        run: |
           git add amazon_products.csv
           git commit -m "🔄 Mise à jour automatique du fichier CSV"
           git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
