--- a/.github/workflows/python-script.yml
+++ b/.github/workflows/python-script.yml
@@ -30,17 +30,12 @@ jobs:
         run: python script.py
 
         
-      - name: Configurer authentification Git
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
+      - name: Commit and push changes
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions@github.com"
-          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git
-
-
-      - name: Valider et pousser les modifications
-        run: |
-          git add amazon_products.csv
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add .
           git commit -m "🔄 Mise à jour automatique du fichier CSV"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
